table_3/results/Picasso_pre_nullaway_ann.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Picasso.java:619: error: [NullAway] dereferenced expression e is @Nullable
        log(OWNER_MAIN, VERB_ERRORED, action.request.logId(), e.getMessage());
                                                               ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/RequestHandler.java:101: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return bitmap;
      ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/RequestHandler.java:176: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return options;
    ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/BitmapHunter.java:83: error: [NullAway] initializer method does not guarantee @NonNull fields actions (line 76), result (line 77) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  BitmapHunter(Picasso picasso, Dispatcher dispatcher, PlatformLruCache cache,
  ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/BitmapHunter.java:193: error: [NullAway] dereferenced expression result is @Nullable
    Bitmap bitmap = result.getBitmap();
                          ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/BitmapHunter.java:207: error: [NullAway] dereferenced expression result is @Nullable
      bitmap = result.getBitmap();
                     ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/BitmapHunter.java:345: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return exception;
    ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/RequestCreator.java:81: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.picasso = null;
                 ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Action.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.wrapper = wrapper;
                 ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Request.java:114: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.uri = builder.uri;
             ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Request.java:133: error: [NullAway] assigning @Nullable expression to @NonNull field
    this.config = builder.config;
                ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Request.java:293: error: [NullAway] initializer method does not guarantee @NonNull field priority (line 287) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Builder( Uri uri) {
           ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Request.java:298: error: [NullAway] initializer method does not guarantee @NonNull field priority (line 287) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Builder(@DrawableRes int resourceId) {
           ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Request.java:302: error: [NullAway] initializer method does not guarantee @NonNull field priority (line 287) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    Builder( @Nullable Uri uri, int resourceId,  @Nullable Bitmap.Config bitmapConfig) {
    ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/nima/Desktop/nullability-docker/table_3/versions/nullaway/picasso-ann-pre/src/src/main/java/com/squareup/picasso3/Picasso.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2s
14
